# py-st-dl-translater-3.0

./: CHANGELOG.md  README.md  README.zh-CN.md  evaluator.py  main.py  predictor.py  pyproject.toml  trainer.py
app/: __init__.py
app/subpages/: __init__.py  home.py  prediction.py
app/tools/: layout.py
data/: dictionary_cn.json  dictionary_en.json  sqlite3.db
pipeline/: __init__.py  prepper.py  preprocessor.py  processor.py
src/: __init__.py
src/configs/: __init__.py  cfg_base.py  cfg_cnn.py  cfg_dl.py  cfg_mlp.py  cfg_rnn.py  cfg_seq2seq_transformer.py  cfg_types.py  cfg_unet.py  parser.py
src/criteria/: __init__.py  mlp_log_mse.py  unet_dice.py  unet_dnf.py  unet_edge.py  unet_focal.py
src/dataloaders/: __init__.py  dataloader4torch.py
src/datasets/: TS4classification.py  TS4next_step.py  __init__.py  dataset4torch.py  mask_mapper.py  sem_seg.py
src/nets/: __init__.py  attention_multi.py  attention_single.py  attentions.py  base_ann.py  base_attn.py  base_encoder4positions.py  base_rnn.py  base_seq2seq.py  multi_task_gru.py  multi_task_lstm.py  multi_task_rnn.py  position_encoders.py  seq2seq.py  seq2seq_attn_gru.py  seq2seq_attn_lstm.py  seq2seq_attn_rnn.py  seq2seq_task_gru.py  seq2seq_task_lstm.py  seq2seq_task_rnn.py  seq2seq_transformer.py  seq_decoder.py  seq_decoder4attn.py  seq_decoder4transformer.py  seq_encoder.py  seq_encoder4transformer.py  transformer_seq_decoder.py  transformer_seq_encoder.py  unet4layers4sem.py  unet5layers4sem.py
src/trainers/: __init__.py  calc4classification.py  calc4cm.py  calc4iou.py  calc4regression.py  (+6 more)
(+11 files in other folders)
