[project]
name = "py-st-dl-translater-3-0"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Shawn Yu" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "nltk>=3.9.2",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "pillow>=12.0.0",
    "pyside6>=6.10.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "spacy-pkuseg>=1.0.1",
    "stqdm>=0.0.5",
    "streamlit>=1.52.2",
    "tensorboard>=2.20.0",
    "thulac>=0.2.2",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchsummary>=1.5.1",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "git-changelog>=2.7.0",
    "ruff>=0.14.10",
]

[tool.git-changelog]
bump = "auto"
convention = "conventional"
in-place = false
filter-commits = ""
marker-line = "<!-- insertion marker for GitHub -->"
output = "CHANGELOG.md"
parse-refs = true
parse-trailers = true
provider = "github"
repository = "."
sections = ["feat", "fix", "chore", "docs", "perf", "build", "refactor", "test", "deps"]
template = "angular"
version-regex = "^## \\[(?P<version>v?[^\\]]+)"
versioning = "semver"
zerover = false
